[modilfy] a태그에 alt대신 span으로 설명 기재

--- a/study_code/a_project/html/main_v1.html
+++ b/study_code/a_project/html/main_v1.html
@@ -156,11 +156,11 @@
         </div>
         <div class="view">
           <ul class="view_in_wrap">
-              <li class="view_content view_content_01 on"><a href="javascript:void(0)"></a></li>
-              <li class="view_content view_content_02"><a href="javascript:void(0)"></a></li>
-              <li class="view_content view_content_03"><a href="javascript:void(0)"></a></li>
-              <li class="view_content view_content_04"><a href="javascript:void(0)"></a></li>
-              <li class="view_content view_content_05"><a href="javascript:void(0)"></a></li>
+              <li class="view_content view_content_01 on"><a href="javascript:void(0)"><span class="blind">첫번째 광고</span></a></li>
+              <li class="view_content view_content_02"><a href="javascript:void(0)"><span class="blind">두번째 광고</span></a></li>
+              <li class="view_content view_content_03"><a href="javascript:void(0)"><span class="blind">세번째 광고</span></a></li>
+              <li class="view_content view_content_04"><a href="javascript:void(0)"><span class="blind">네번째 광고</span></a></li>
+              <li class="view_content view_content_05"><a href="javascript:void(0)"><span class="blind">다섯번째 광고</span></a></li>
           </ul>
         </div>
         <div class="view_num"><span class="view_now_count">1</span>&sol;<span class="view_total_count"></span></div>
@@ -186,7 +186,7 @@
       <ul class="best_area">
         <li class="best_item">
           <a href="javascript:void(0)">
-            <div class="best_img"></div>
+            <div class="best_img"><span class="blind">엠티 큐브 4주 파우치 이미지</span></div>
             <dl class="best_text">
               <dt class="text_title">엠티 큐브 4주 파우치</dt>
               <dd class="text_price">28,000원</dd>
@@ -196,7 +196,7 @@
         </li>
         <li class="best_item">
           <a href="javascript:void(0)">
-            <div class="best_img"></div>
+            <div class="best_img"><span class="blind">블럭 큐브 4주 파우치 이미지</span></div>
             <dl class="best_text">
               <dt class="text_title">블럭 큐브 4주 파우치</dt>
               <dd class="text_price">28,000원</dd>
@@ -206,7 +206,7 @@
         </li>
         <li class="best_item">
           <a href="javascript:void(0)">
-            <div class="best_img"></div>
+            <div class="best_img"><span class="blind">커트 큐브 4주 파우치 이미지</span></div>
             <dl class="best_text">
               <dt class="text_title">커트 큐브 4주 파우치</dt>
               <dd class="text_price">36,000원</dd>
@@ -216,7 +216,7 @@
         </li>
         <li class="best_item">
           <a href="javascript:void(0)">
-            <div class="best_img"></div>
+            <div class="best_img"><span class="blind">엠티 큐브 4주/8주 파우치 이미지</span></div>
             <dl class="best_text">
               <dt class="text_title">엠티 큐브 4주/8주</dt>
               <dd class="text_price">46,400원</dd>
@@ -226,7 +226,7 @@
         </li>
         <li class="best_item">
           <a href="javascript:void(0)">
-            <div class="best_img"></div>
+            <div class="best_img"><span class="blind">깨끗한 발효효소(90g) 이미지</span></div>
             <dl class="best_text">
               <dt class="text_title">깨끗한 발효효소(90g)</dt>
               <dd class="text_price">48,000원</dd>
@@ -236,7 +236,7 @@
         </li>
         <li class="best_item">
           <a href="javascript:void(0)">
-            <div class="best_img"></div>
+            <div class="best_img"><span class="blind">콜라켄 큐브 5주 X 3ea 이미지</span></div>
             <dl class="best_text">
               <dt class="text_title">콜라켄 큐브 5주 X 3ea</dt>
               <dd class="text_price">81,000원</dd>
@@ -246,7 +246,7 @@
         </li>
         <li class="best_item">
           <a href="javascript:void(0)">
-            <div class="best_img"></div>
+            <div class="best_img"><span class="blind">프로틴 큐브 2주 파우치 이미지</span></div>
             <dl class="best_text">
               <dt class="text_title">프로틴 큐브 2주</dt>
               <dd class="text_price">36,000원</dd>
@@ -256,7 +256,7 @@
         </li>
         <li class="best_item">
           <a href="javascript:void(0)">
-            <div class="best_img"></div>
+            <div class="best_img"><span class="blind">멀티비타 큐브 6주분 이미지</span></div>
             <dl class="best_text">
               <dt class="text_title">멀티비타 큐브 6주분</dt>
               <dd class="text_price">70,000원</dd>
@@ -280,6 +280,7 @@
       <ul class="benefit_detail_area">
         <li class="benefit">
           <div class="benefit_img benefit_img_coupon">
+            <span class="blind">회원가입 시 혜택</span>
           </div>
           <p class="benefit_text">
             회원가입시 
@@ -292,6 +293,7 @@
 
         <li class="benefit">
           <div class="benefit_img benefit_img_review">
+            <span class="blind">포토리뷰 작성 시 혜택</span>
           </div>
           <p class="benefit_text">
             포토리뷰 작성시 
@@ -302,6 +304,7 @@
 
         <li class="benefit">
           <div class="benefit_img benefit_img_friend">
+            <span class="blind">친구 추천 시 혜택</span>
           </div>
           <p class="benefit_text">
             친구 추천시 나와 친구 <br />
@@ -323,8 +326,8 @@
         </div>
       </div>
       <ul class="challenge_area">
-        <li class="challenge"><a href="javascript:void(0)"></a></li>
-        <li class="challenge"><a href="javascript:void(0)"></a></li>
+        <li class="challenge"><a href="javascript:void(0)"><span class="blind">다이어트 성공의 비결, 그룹 다이어트</span></a></li>
+        <li class="challenge"><a href="javascript:void(0)"><span class="blind">나의 체력을 위한, 그룹 운동</span></a></li>
       </ul>
 
     </article> <!-- // #challengeBox-->
@@ -341,7 +344,7 @@
       <ul class="event_area">
         <li class="event">
           <a href="./event_v1.html">
-            <div class="event_img"></div>
+            <div class="event_img"><span class="blind">2022 설 선물 기획 세트 이벤트</span></div>
             <dl class="event_text">
               <dt class="event_title">2022 설 선물 기획세트</dt>
               <dd class="event_detial">최대 60% 할인</dd>
@@ -351,7 +354,7 @@
 
         <li class="event">
           <a href="./event_v1.html">
-            <div class="event_img"></div>
+            <div class="event_img"><span class="blind">신규회원 100원 딜 이벤트</span></div>
             <dl class="event_text">
               <dt class="event_title">신규회원 100원 딜</dt>
               <dd class="event_detial">오직 신규회원만 100원으로 만나는 큐브미</dd>
@@ -361,7 +364,7 @@
 
         <li class="event">
           <a href="./event_v1.html">
-            <div class="event_img"></div>
+            <div class="event_img"><span class="blind">아모레퍼시픽 신한카드 프로모션 이벤트</span></div>
             <dl class="event_text">
               <dt class="event_title">아모레퍼시픽 신한카드 프로모션</dt>
               <dd class="event_detial">최대 10만포인트 적립</dd>
@@ -371,7 +374,7 @@
 
         <li class="event">
           <a href="./event_v1.html">
-            <div class="event_img"></div>
+            <div class="event_img"><span class="blind">슬기로운 친추생활 이벤트</span></div>
             <dl class="event_text">
               <dt class="event_title">슬기로운 친추생활</dt>
               <dd class="event_detial">친구 초대하면 친구도 나도 포인트 적립</dd>
@@ -381,7 +384,7 @@
 
         <li class="event">
           <a href="./event_v1.html">
-            <div class="event_img"></div>
+            <div class="event_img"><span class="blind">다이어트 서비스 이벤트</span></div>
             <dl class="event_text">
               <dt class="event_title">다이어트 서비스</dt>
               <dd class="event_detial">챌린지 신청시 30% 할인</dd>
@@ -405,14 +408,14 @@
           </div>
 
           <ul class="awards_main">
-            <li class="awards awards_01"></li>
-            <li class="awards awards_02"></li>
-            <li class="awards awards_03"></li>
-            <li class="awards awards_04"></li>
-            <li class="awards awards_05"></li>
-            <li class="awards awards_06"></li>
-            <li class="awards awards_07"></li>
-            <li class="awards awards_08"></li>
+            <li class="awards awards_01"><span class="blind">첫번째 상</span></li>
+            <li class="awards awards_02"><span class="blind">두번째 상</span></li>
+            <li class="awards awards_03"><span class="blind">세번째 상</span></li>
+            <li class="awards awards_04"><span class="blind">네번째 상</span></li>
+            <li class="awards awards_05"><span class="blind">다섯번째 상</span></li>
+            <li class="awards awards_06"><span class="blind">여섯번째 상</span></li>
+            <li class="awards awards_07"><span class="blind">일곱번째 상</span></li>
+            <li class="awards awards_08"><span class="blind">여덟번째 상</span></li>
           </ul>
         </div>
       </div> <!-- // .awards_area -->
@@ -431,7 +434,7 @@
       <div class="sale_area">
         <div class="sale_item">
           <a href="javascript:void(0)">
-            <div class="sale_img"></div>
+            <div class="sale_img"><span class="blind">엠티 큐브 4주 파우치</span></div>
             <ul class="sale_text">
               <li class="sale_title">엠티 큐브 4주 파우치</li>
               <li class="sale_last_price">35,000원</li>
@@ -446,7 +449,7 @@
 
         <div class="sale_item">
           <a href="javascript:void(0)">
-            <div class="sale_img"></div>
+            <div class="sale_img"><span class="blind">블럭 큐브 4주 파우치</span></div>
             <ul class="sale_text">
               <li class="sale_title">블럭 큐브 4주 파우치</li>
               <li class="sale_last_price">35,000원</li>
@@ -461,7 +464,7 @@
 
         <div class="sale_item">
           <a href="javascript:void(0)">
-            <div class="sale_img"></div>
+            <div class="sale_img"><span class="blind">커트 큐브 4주 파우치</span></div>
             <ul class="sale_text">
               <li class="sale_title">커트 큐브 4주 파우치</li>
               <li class="sale_last_price">45,000원</li>
@@ -476,7 +479,7 @@
 
         <div class="sale_item">
           <a href="javascript:void(0)">
-            <div class="sale_img"></div>
+            <div class="sale_img"><span class="blind">엠티 큐브 4주/8주</span></div>
             <ul class="sale_text">
               <li class="sale_title">엠티 큐브 4주/8주</li>
               <li class="sale_last_price">58,000원</li>
@@ -491,7 +494,7 @@
 
         <div class="sale_item">
           <a href="javascript:void(0)">
-            <div class="sale_img"></div>
+            <div class="sale_img"><span class="blind">깨끗한 발효효소(90g)</span></div>
             <ul class="sale_text">
               <li class="sale_title">깨끗한 발효효소(90g)</li>
               <li class="sale_last_price">60,000원</li>
@@ -511,7 +514,7 @@
     <!-- #magazineBox -->
     <article id="magazineBox">
       <h2 class="blind">매거진</h2>
-      <div class="magazine_img"><a href="javascript:void(0)"></a></div>
+      <div class="magazine_img"><a href="javascript:void(0)"><span class="blind">매거진 vol.5 건강한 다이어트</span></a></div>
 
     </article> <!-- // #magazineBox-->
 
@@ -553,10 +556,10 @@
 
         <ul class="foot_bottom_btn">
           <li class="foot_facebook">
-            <a href="javascript:void(0)"></a>
+            <a href="javascript:void(0)"><span class="blind">페이스북 바로가기</span></a>
           </li>
           <li class="foot_instagram">
-            <a href="javascript:void(0)"></a>
+            <a href="javascript:void(0)"><span class="blind">인스타그램 바로가기</span></a>
           </li>
         </ul>
       </div> <!-- // .foot_main_area -->
