[add] 스크롤시 header 움직임

--- a/study_code/a_project/html/main_v1.html
+++ b/study_code/a_project/html/main_v1.html
@@ -77,7 +77,8 @@
                 <div class="unb_search_icon">
                   <button type="button"></button>
                 </div>
-              </div> <!-- // .unb_search -->
+              </div> 
+              <!-- // .unb_search -->
               <div class="unb_cart">
                 <a href="javascript:void(0)"></a>
               </div>
